2000-04-18  Adam Fedor  <fedor@gnu.org>

	* base/configure.in: add a test to see whether a symlink
	'/proc/self/exe' exists
        * base/Headers/gnustep/base/config.h.in: Add a definition for the
	test result
        * base/Source/NSBundle.m: Move the discovery of the process'
	executable file to +initialize; add code to discover it from
	/proc, if possible (patches from Jonathan Gapen 
	<jagapen@whitewater.chem.wisc.edu>)

2000-04-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/gsdoc/NSCountedSet.gsdoc: Method descriptions fleshed
	out, including GNUstep additional methods and related functions.
	* Documentation/gsdoc/NSDeserializer.gsdoc: GNUstep specific extension
	method documented.
	* GSDoc/gnustep.gsdoc: Fixed use of 'standards' element.
	* Headers/NSSerialization.h: Removed some extensions.
	* Headers/NSSet.h: Added some extensions for uniquing.
	* Source/NSCountedSet.m: Added uniquing methods and functions.
	* Source/NSGCountedSet.m: Added optimised uniquing methods.
	* Source/NSSerializer.m: Simplified uniquing code using stuff from
	NSCountedSet.
	* Testing/benchmark.m: included uniquing serialization/deserialization.

2000-04-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/mframe.m: Update to handle '-' in stack position information
	in type encodings.
	* Source/Invocation.m: ditto
	* Source/objc-gnu2next.m: ditto
	* Source/mframe/*/generic: ditto

2000-04-08  Adam Fedor  <fedor@gnu.org>

	* Source/NSString.m: Include NSISOLatin2StringEncoding coding.
	* Source/Unicode.m (encode_chartouni): Implement latin2 encoding.
	(encode_unitochar): Likewise. (patches from  
	Stefan Urbanek <urbane@decef.elf.stuba.sk>).

2000-04-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m: Bugfix intialising from string.

2000-04-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSException.h: remove 'volatile' from function
	and method declarations - no longer supported in gcc.
	* Source/NSException.m: ditto
